--- a/app/src/main/res/layout/item_parking_list.xml
+++ b/app/src/main/res/layout/item_parking_list.xml
@@ -38,29 +38,31 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="45dp"
-        android:layout_height="44dp"
+        android:layout_width="37dp"
+        android:layout_height="37dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.479"
+        app:layout_constraintHorizontal_bias="0.017"
         app:layout_constraintStart_toEndOf="@+id/ivParkingListPhoto"
         app:layout_constraintTop_toBottomOf="@+id/tvParkingName"
         app:srcCompat="@android:drawable/btn_star_big_off" />
 
     <TextView
-        android:id="@+id/tvAddres"
+        android:id="@+id/tvAddressParkingList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/montserrat_regular"
         android:text="TextView"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.022"
         app:layout_constraintStart_toEndOf="@+id/ivParkingListPhoto"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.529" />
 </android.support.constraint.ConstraintLayout>
