--- a/app/src/main/res/layout/activity_floor_info.xml
+++ b/app/src/main/res/layout/activity_floor_info.xml
@@ -59,6 +59,7 @@
         android:layout_width="338dp"
         android:layout_height="155dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="Parking La Pedrera"
         android:textColor="@color/colorPrimaryDark"
@@ -67,154 +68,151 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <TextView
-        android:id="@+id/textView17"
+        android:id="@+id/tvFloorNumFloorInfo"
         android:layout_width="0dp"
-        android:layout_height="45dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="24dp"
         android:background="@color/colorPrimary"
         android:fontFamily="@font/montserrat_bold"
+        android:lineSpacingExtra="14sp"
         android:text="      Floor 1"
+        android:textAlignment="textStart"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvParkingNameFloorInfo" />
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/scrollView3"
-        android:layout_width="416dp"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17"
-        app:layout_constraintVertical_bias="0.076">
+        app:layout_constraintTop_toBottomOf="@+id/tvFloorNumFloorInfo">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/imageView18"
-                android:layout_width="76dp"
-                android:layout_height="79dp"
-                android:layout_marginStart="44dp"
-                android:layout_marginTop="40dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvCarFloorInfo"
-                app:srcCompat="@drawable/motorbike" />
-
-            <TextView
-                android:id="@+id/tvDisableFloorInfo"
-                android:layout_width="73dp"
-                android:layout_height="32dp"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="88dp"
-                android:fontFamily="@font/montserrat_regular"
-                android:text="None"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="18sp"
-                app:layout_constraintStart_toEndOf="@+id/imageView23"
-                app:layout_constraintTop_toBottomOf="@+id/tvElectricFloorInfo" />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="95dp"
-                android:layout_height="87dp"
-                android:layout_marginStart="36dp"
+                android:id="@+id/ivElectricFloorInfo"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="24dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView23"
-                app:srcCompat="@drawable/bike" />
-
-            <ImageView
-                android:id="@+id/imageView23"
-                android:layout_width="81dp"
-                android:layout_height="80dp"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView22"
-                app:srcCompat="@drawable/wheelchair" />
-
-            <TextView
-                android:id="@+id/tvBikeFloorInfo"
-                android:layout_width="73dp"
-                android:layout_height="32dp"
-                android:layout_marginStart="28dp"
-                android:layout_marginTop="76dp"
-                android:fontFamily="@font/montserrat_regular"
-                android:text="None"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="18sp"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toBottomOf="@+id/tvDisableFloorInfo" />
-
-            <ImageView
-                android:id="@+id/imageView22"
-                android:layout_width="76dp"
-                android:layout_height="79dp"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="24dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView18"
+                app:layout_constraintTop_toBottomOf="@+id/ivCarFloorInfo"
                 app:srcCompat="@drawable/electric" />
 
-            <TextView
-                android:id="@+id/tvElectricFloorInfo"
-                android:layout_width="73dp"
-                android:layout_height="32dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="64dp"
-                android:fontFamily="@font/montserrat_regular"
-                android:text="None"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="18sp"
-                app:layout_constraintStart_toEndOf="@+id/imageView22"
-                app:layout_constraintTop_toBottomOf="@+id/tvMotorbikeFloorInfo" />
+            <ImageView
+                android:id="@+id/ivCarFloorInfo"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="28dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/car" />
 
-            <TextView
-                android:id="@+id/tvMotorbikeFloorInfo"
-                android:layout_width="73dp"
-                android:layout_height="32dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="56dp"
-                android:layout_marginEnd="8dp"
-                android:fontFamily="@font/montserrat_regular"
-                android:text="None"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.12"
-                app:layout_constraintStart_toEndOf="@+id/imageView18"
-                app:layout_constraintTop_toBottomOf="@+id/tvCarFloorInfo" />
+            <ImageView
+                android:id="@+id/ivMotorbikeFloorInfo"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="24dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ivElectricFloorInfo"
+                app:srcCompat="@drawable/motorbike" />
+
+            <ImageView
+                android:id="@+id/ivDisabledFloorInfo"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="24dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ivMotorbikeFloorInfo"
+                app:srcCompat="@drawable/wheelchair" />
+
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="85dp"
+                android:layout_height="85dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ivDisabledFloorInfo"
+                app:srcCompat="@drawable/bike" />
 
             <TextView
                 android:id="@+id/tvCarFloorInfo"
-                android:layout_width="73dp"
-                android:layout_height="32dp"
-                android:layout_marginTop="28dp"
-                android:layout_marginEnd="188dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="48dp"
                 android:fontFamily="@font/montserrat_regular"
-                android:text="None"
+                android:text="TextView"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:textSize="24sp"
+                app:layout_constraintStart_toEndOf="@+id/ivCarFloorInfo"
                 app:layout_constraintTop_toTopOf="parent" />
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v4.widget.NestedScrollView>
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="76dp"
-        android:layout_height="79dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17"
-        app:srcCompat="@drawable/car" />
+            <TextView
+                android:id="@+id/tvElectricFloorInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="64dp"
+                android:fontFamily="@font/montserrat_regular"
+                android:text="TextView"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="24sp"
+                app:layout_constraintStart_toEndOf="@+id/ivElectricFloorInfo"
+                app:layout_constraintTop_toBottomOf="@+id/tvCarFloorInfo" />
+
+            <TextView
+                android:id="@+id/tvMotorbikeFloorInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="64dp"
+                android:fontFamily="@font/montserrat_regular"
+                android:text="TextView"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="24sp"
+                app:layout_constraintStart_toEndOf="@+id/ivMotorbikeFloorInfo"
+                app:layout_constraintTop_toBottomOf="@+id/tvElectricFloorInfo" />
+
+            <TextView
+                android:id="@+id/tvDisabledFloorInfo4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="64dp"
+                android:fontFamily="@font/montserrat_regular"
+                android:text="TextView"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="24sp"
+                app:layout_constraintStart_toEndOf="@+id/ivDisabledFloorInfo"
+                app:layout_constraintTop_toBottomOf="@+id/tvMotorbikeFloorInfo" />
+
+            <TextView
+                android:id="@+id/tvBicycleFloorInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="45dp"
+                android:layout_marginTop="64dp"
+                android:fontFamily="@font/montserrat_regular"
+                android:text="TextView"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="24sp"
+                app:layout_constraintStart_toEndOf="@+id/imageView11"
+                app:layout_constraintTop_toBottomOf="@+id/tvDisabledFloorInfo4" />
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
