--- a/app/src/main/res/layout/activity_add_paypal.xml
+++ b/app/src/main/res/layout/activity_add_paypal.xml
@@ -45,7 +45,7 @@
         app:srcCompat="@drawable/paypal" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/tvPaypal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
