--- a/app/src/main/res/layout/activity_navmenu_choosepayment.xml
+++ b/app/src/main/res/layout/activity_navmenu_choosepayment.xml
@@ -46,7 +46,7 @@
 
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/tvCreditCar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -61,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ivCredit" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/tvPaypal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
