--- a/app/src/main/res/layout/fragment_payment_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_methods.xml
@@ -62,7 +62,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView28">
 
             <ListView
-                android:id="@+id/lvParkingItems"
+                android:id="@+id/lvPaymentItems"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimaryDark"
@@ -76,7 +76,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="ADD PYAMENT METHOD"
+            android:text="ADD PAYMENT METHOD"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
