--- a/app/src/main/res/layout/activity_floor_info.xml
+++ b/app/src/main/res/layout/activity_floor_info.xml
@@ -152,7 +152,7 @@
                 app:srcCompat="@drawable/wheelchair" />
 
             <ImageView
-                android:id="@+id/imageView11"
+                android:id="@+id/ivBicycleFloorInfo"
                 android:layout_width="85dp"
                 android:layout_height="85dp"
                 android:layout_marginStart="32dp"
@@ -225,7 +225,7 @@
                 android:text="TextView"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="24sp"
-                app:layout_constraintStart_toEndOf="@+id/imageView11"
+                app:layout_constraintStart_toEndOf="@+id/ivBicycleFloorInfo"
                 app:layout_constraintTop_toBottomOf="@+id/tvDisabledFloorInfo4" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
