--- a/app/src/main/res/layout/item_slot_detailed_info.xml
+++ b/app/src/main/res/layout/item_slot_detailed_info.xml
@@ -20,7 +20,7 @@
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tvSlotState"
-        app:layout_constraintStart_toEndOf="@+id/tvSlotName"
+        app:layout_constraintStart_toEndOf="@+id/tvSlotColor"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
@@ -41,7 +41,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/tvSlotName"
+        android:id="@+id/tvSlotColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
