--- a/app/src/main/res/layout/item_slot_detailed_info.xml
+++ b/app/src/main/res/layout/item_slot_detailed_info.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="8dp"
         android:text="TextView"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,6 +30,7 @@
         android:layout_marginEnd="160dp"
         android:text="TextView"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -41,6 +43,7 @@
         android:layout_marginEnd="8dp"
         android:text="TextView"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
