--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#D87A32</color>
+    <color name="colorPrimary">#C07A45</color>
     <color name="colorPrimaryDark">#363636</color>
     <color name="colorAccent">#DFBB8F</color>
     <color name="fontColor">#FFFFFF</color>
