--- a/app/src/main/res/layout/activity_add_paypal.xml
+++ b/app/src/main/res/layout/activity_add_paypal.xml
@@ -5,30 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context=".AddPaypalActivity">
-
-    <ImageView
-        android:id="@+id/ivBack"
-        android:layout_width="88dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back" />
+    tools:context=".Activities.AddPaypalActivity">
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
         android:fontFamily="@font/bebasneue_regular"
         android:text="Payment Method"
         android:textColor="@color/fontColor"
         android:textSize="45sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivBack" />
+        tools:layout_editor_absoluteY="88dp" />
 
     <ImageView
         android:id="@+id/ivPaypal"
