--- a/app/src/main/res/layout/activity_floor_info.xml
+++ b/app/src/main/res/layout/activity_floor_info.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/fontColor"
-    tools:context=".FloorInfoActivity">
+    tools:context=".Activities.FloorInfoActivity">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
