--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".NavigationActivity"
+    tools:context=".Activities.NavigationActivity"
     tools:showIn="@layout/app_bar_navigation"
     android:backgroundTint="@color/fontColor">
 
@@ -18,7 +18,7 @@
 
         <fragment
             android:id="@+id/fragment"
-            android:name="com.example.parkingapp.MapsFragment"
+            android:name="com.example.parkingapp.Fragments.MapsFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
