--- a/app/src/main/res/layout/filter_dialog.xml
+++ b/app/src/main/res/layout/filter_dialog.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
-    tools:context=".FilterFragment">
+    tools:context=".Fragments.FilterFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
