--- a/app/src/main/res/layout/fragment_filter6.xml
+++ b/app/src/main/res/layout/fragment_filter6.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".FilterFragment">
+    tools:context=".Fragments.FilterFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
